ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: app
spec:
  rules:
  - host: demo3.local
    http:
      paths:
      - path: /
        backend:
          serviceName: second-deployment
          servicePort: 3000
